--- a/common/css/style.css
+++ b/common/css/style.css
@@ -330,11 +330,15 @@ footer {
   }
   header {
     height: 100vh;
-    background-color: black;
   }
   header h1 {
     font-size: 42px;
   }
+
+  #video {
+    object-fit: cover;
+  }
+
   main {
     padding: 0 12px;
   }
