--- a/common/css/style.css
+++ b/common/css/style.css
@@ -321,7 +321,8 @@ form {
   padding: 12px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
-#simulation {
+#simulation,
+#simulation_jp {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -348,6 +349,28 @@ form {
   text-align: right;
   padding-right: 12px;
 }
+
+#simulation_jp label {
+  width: 300px;
+  display: inline-block;
+}
+#simulation_jp select {
+  border: none;
+  width: 300px;
+  text-align: right;
+  padding-right: 12px;
+}
+
+#simulation_jp option {
+  padding-right: 12px;
+}
+#simulation_jp input {
+  border: none;
+  width: 300px;
+  text-align: right;
+  padding-right: 12px;
+}
+
 #simulation_price {
   text-align: center;
   font-size: 1.6rem;
